aether-ui/kubernetes/kernel/kernel-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kernel
  labels:
    app: kernel
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kernel
    spec:
      containers:
      - name: kernel
        image: ehealthafrica/aether-kernel:0.5.1
        args:
        - start
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /var/www/static
          name: static-assets-volume
        stdin: true
        tty: true
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/static
          name: static-assets-volume
        - name: kernel-nginx-config
          mountPath: /etc/nginx/conf.d
      imagePullSecrets:
        - name: regsecret
      volumes:
        - name: static-assets-volume
          emptyDir: {}
        - name: kernel-nginx-config
          configMap:
            name: kernel-nginx-config
      restartPolicy: Always
