aether-ui/kubernetes/kernel/kernel-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kernel
  name: kernel
spec:
  type: NodePort
  ports:
  - port: 80  
    targetPort: 80
    protocol: TCP
  selector:
    app: kernel
